live-troubleshooting-modules/k8s-rails-todo-list/rails-application/railsk8s-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: railsk8s-app
  name: railsk8s-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: railsk8s-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: railsk8s-app
    spec:
      containers:
      - image: jakuboboza/rails-on-k8s:latest
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
      tolerations:
      - key: "app-pool"
        operator: "Exists"
        effect: "NoSchedule"
