live-troubleshooting-modules/k8s-rails-todo-list/rails-application/railsk8s-sidecar-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: railsk8s-sidecar-deploy
  name: railsk8s-sidecar-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: railsk8s-sidecar
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: railsk8s-sidecar
    spec:
      volumes:
      - name: shared-data
        emptyDir: {}
      containers:
      - image: jakuboboza/rails-on-k8s:latest
        imagePullPolicy: Always
        name: backend
        command: ["./bin/run_sidecar"]
        volumeMounts:
        - name: shared-data
          mountPath: /app_shared
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "125m"
      - image: jakuboboza/rails-on-k8s:ngx-small-latest
        imagePullPolicy: Always
        name: frontend
        volumeMounts:
        - name: shared-data
          mountPath: /app_shared
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "125m"
