live-troubleshooting-modules/k8s-rails-todo-list/rails-application/railsk8s-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rails-svc
spec:
  selector:
    app: railsk8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
